--- a/assets/css/vno.css
+++ b/assets/css/vno.css
@@ -208,6 +208,27 @@ body {
   -o-animation-duration: 1s;
   animation-duration: 1s;
 }
+.blurred-wrapper {
+  height: 100vh;
+  background: url(../img/background.jfif) center/cover;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  animation: hue 10s infinite alternate;
+}
+
+.blurred-wrapper::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  filter: blur(1rem);
+  transform: scale(1.15);
+}
 @-webkit-keyframes flash {
   0%,
   50%,
